2003-08-04  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/GraphViz.py (make_doc_menu): Add paper option to the menu.
	* src/GenericFilter.py: Fixes for existing filters (ancestors and
	descendants used to include the original person). 
	Four new filters: ancestors and descendants more and less than so many
	generations away. 
	* NEWS: Compile preliminary contents for the next release. 
	* src/plugins/WebPage.py (WebReportDialog.get_report_generations): 
	Disable number of generations (was not used anyway).

2003-08-02  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/dialog.glade: Consistent tooltips.
	* src/gramps.glade: Likewise.
	* src/marriage.glade: Likewise.
	* src/edit_person.glade: Likewise.
	* src/plugins/pafexport.glade: Consistent check box label. 
	* src/po/template.po: Update the above corrections in template.
	* src/gramps_main.py (save_file): Remove statusbar.set_pulse_step() 
	call because gnome.ui.AppBar does not have such method.

2003-08-01  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/writeftree.glade: Swap OK and Cancel buttons (HIG).
	* src/plugins/cdexport.glade: Likewise.
	* src/plugins/gedcomexport.glade: Likewise.
	* src/plugins/pkgexport.glade: Likewise.
	* src/plugins/ReadGedcom.py: Fix Cancel button (was destroying itself).

2003-08-01  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/GraphViz.py: toggle sensitivity on year button if based
	of date button selection, add new tab for page options to reduce 
	dialog size.

2003-08-01  Lorenzo Cappelletti  <lorenzo.cappelletti@email.it>
	* src/plugins/GraphViz.py: Added option to limit dates to just years,
	fixed bug to prevent family nodes from being listed more than once

2003-08-01  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/WriteFtree.py: add filter and data restriction support
	* src/plugins/writeftree.glade: interface description for Web Family
	Tree export filter

2003-07-31  Alex Roitman  <shura@alex.neuro.umn.edu>